--- a/src/cards/NewHomePage.css
+++ b/src/cards/NewHomePage.css
@@ -31,7 +31,11 @@
 }
 
 @media(max-width:450px){
+
+    .card-sec{
+        width: 100%;
+    }
     .inside-col-card{
-        height: 370px;
+        height: 400px;
     }
 }
