--- a/src/cards/Cards/Cards.css
+++ b/src/cards/Cards/Cards.css
@@ -52,25 +52,30 @@
     height: 60%;
     display: grid;
     align-items: center;
-    
+    padding-bottom: 10px;
     
 }
 
 .hospital-name{
     display: flex;
     padding-top: 1vh;
+    max-height: 70px;
+word-break: break-all;
 }
 
 .hospital-name-content{
     font-family: 'Montserrat', sans-serif;
-    max-width: 80%;
+    display: flex;
+    max-width: 70%;
     margin-left: 15px;
     position: relative;
     bottom: 7px;
     font-weight: 600;
-    padding-right: 15px;
+    padding-right: 5px;
     font-size:3vh;
-    line-height: 30px;
+    max-height: 30px;
+    overflow: hidden;
+    overflow-wrap: normal;
     border: 2px solid #2B2B2B;
     border-top-style:none;
     border-left-style: none;
@@ -78,6 +83,46 @@
     letter-spacing: 3px;
     /* width: 90%; */
     text-align: left;  
+   
+}
+
+.rd-more-btn{
+    font-weight: 900;
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 2vh;
+    position: relative;
+    bottom:7px;
+    cursor: pointer;
+}
+
+.rd-more-btn p {
+    height: fit-content;
+}
+.hospital-name-content-lg{
+    font-family: 'Montserrat', sans-serif;
+    display: flex;
+    max-width: 70%;
+    margin-left: 15px;
+    position: relative;
+    bottom: 7px;
+    font-weight: 600;
+    padding-right: 15px;
+    font-size:3vh;
+    max-height: 60px;
+    overflow: hidden;
+    overflow-wrap: normal;
+    /* border: 2px solid #2B2B2B;
+    border-top-style:none;
+    border-left-style: none;
+    border-right-style: none; */
+    letter-spacing: 3px;
+    /* width: 90%; */
+    text-align: left;  
+   
 }
 
 .hospital-name-verified{
@@ -85,6 +130,14 @@
     right: 35px;
 }
 
+
+.displayed-text{
+    display: flex;
+}
+
+.displayed-text text{
+    overflow: hidden;
+}
 .hospital-name-verified:hover{
     cursor: pointer;
 }
@@ -196,14 +249,15 @@
     border-left-style: none;
     border-right-style: none; 
     width: 85%;
+    text-align: center;
 }
 
 .qt-top svg{
-    fill:  red;
+    fill:  #7E62FE;
 }
 
 .qt-bottom svg{
-    fill:  red;
+    fill:  #7E62FE
 }
 
 .qt-top{
@@ -218,10 +272,21 @@
 
 @media(max-width:450px){
     .card-whole{
-        height: 360px;
+        height: 400px;
+    }
+
+    .hospital-name-content{
+        max-width: 50%;
+        font-size: 3vh;
+        max-height: 4vh;
+        padding-bottom: 5px;
+    }
+
+    .hospital-name-content-lg{
+        max-width: 50%;
     }
     .card-whole-back{
-        height: 30px;
+        height: 400px;
     }
     .bed-info{
         height:25%;
