--- a/src/hamburgers.css
+++ b/src/hamburgers.css
@@ -1,5 +1,5 @@
 /*!
- * Hamburgers
+ * 
  * @description Tasty CSS-animated hamburgers
  * @author Jonathan Suh @jonsuh
  * @site https://jonsuh.com/hamburgers
@@ -73,3 +73,23 @@
         bottom: 0;
         transform: rotate(-90deg);
         transition: bottom 0.1s ease-out, transform 0.22s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1); }
+
+        .is-active{
+          z-index: 1100;
+        }
+
+        @media (max-width:800px) {
+
+      
+          #search-bar{
+            position: relative;
+          }
+
+          .hamburger-box{
+            position: relative;
+            top:3vh;
+            
+          }
+
+        
+        }
