--- a/src/cards/Cards/Cards.css
+++ b/src/cards/Cards/Cards.css
@@ -48,6 +48,7 @@
 
 .hospital-info{
     width: 90%;
+    max-width: 100%;
     margin: auto;
     height: 60%;
     display: grid;
@@ -160,7 +161,7 @@ word-break: break-all;
     background: #FFFFFF;
     border: 1px solid #6F50FF;
     box-shadow: 0px 4px 14px 0px #0000001F;
-    width: 40%;
+    /* width: 40%; */
     /* padding-left: 15px;
     padding-right: 15px; */
     color: rgb(0, 0, 0);
