--- a/src/main.css
+++ b/src/main.css
@@ -116,6 +116,11 @@ select::-ms-expand {
   color: white;
   background: #6748F7;
   border-radius: 5px;
+  /* text-align: center; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width:4vw;
   padding:1.8vh 8vw;
   border: 0;
   text-align: center;
