--- a/src/hamburgers2.css
+++ b/src/hamburgers2.css
@@ -18,9 +18,9 @@
     background-color: transparent;
     border: 0;
     margin: 0; }
-    .hamburger.is-active .hamburger-inner,
-    .hamburger.is-active .hamburger-inner::before,
-    .hamburger.is-active .hamburger-inner::after {
+    .hamburger.is-active-true .hamburger-inner2,
+    .hamburger.is-active-true .hamburger-inner2::before,
+    .hamburger.is-active-true .hamburger-inner2::after {
       background-color: #8F79F5; 
     }
   
@@ -30,55 +30,55 @@
     display: inline-block;
     position: relative; }
   
-  .hamburger-inner {
+  .hamburger-inner2 {
     display: block;
     top: 50%;
     margin-top: -2px; }
-    .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
+    .hamburger-inner2, .hamburger-inner2::before, .hamburger-inner2::after {
       width: 40px;
       height: 4px;
-      background-color: #7E62FE;
+      background-color: #8F79F5;
       border-radius: 4px;
       position: absolute;
       transition-property: transform;
       transition-duration: 0.15s;
       transition-timing-function: ease; }
-    .hamburger-inner::before, .hamburger-inner::after {
+    .hamburger-inner2::before, .hamburger-inner2::after {
       content: "";
       display: block; }
-    .hamburger-inner::before {
+    .hamburger-inner2::before {
       top: -10px; }
-    .hamburger-inner::after {
+    .hamburger-inner2::after {
       bottom: -10px; }
   
       /*
          * Spin
          */
-      .hamburger--spin .hamburger-inner {
+      .hamburger--spin .hamburger-inner2 {
         transition-duration: 0.22s;
         transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19); 
       }
-      .hamburger--spin .hamburger-inner::before {
+      .hamburger--spin .hamburger-inner2::before {
         transition: top 0.1s 0.25s ease-in, opacity 0.1s ease-in; 
       }
-      .hamburger--spin .hamburger-inner::after {
+      .hamburger--spin .hamburger-inner2::after {
         transition: bottom 0.1s 0.25s ease-in, transform 0.22s cubic-bezier(0.55, 0.055, 0.675, 0.19); 
       }
   
-      .hamburger--spin.is-active .hamburger-inner {
+      .hamburger--spin.is-active-true .hamburger-inner2 {
         transform: rotate(225deg);
         transition-delay: 0.12s;
         transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); }
-        .hamburger--spin.is-active .hamburger-inner::before {
+        .hamburger--spin.is-active-true .hamburger-inner2::before {
           top: 0;
           opacity: 0;
           transition: top 0.1s ease-out, opacity 0.1s 0.12s ease-out; }
-        .hamburger--spin.is-active .hamburger-inner::after {
+        .hamburger--spin.is-active-true .hamburger-inner2::after {
           bottom: 0;
           transform: rotate(-90deg);
           transition: bottom 0.1s ease-out, transform 0.22s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1); }
   
-          .is-active{
+          .is-active-true{
             z-index: 1100;
           }
   
