--- a/src/cards/Cards/Cards.css
+++ b/src/cards/Cards/Cards.css
@@ -2,7 +2,7 @@
     width: 95%;
     margin: auto;
     background-color: white;
-    height: 350px;
+    height: 400px;
     padding-top: 10px;
     box-shadow: 0px 4px 20px 0px #ccc;
     border-radius: 15px;
@@ -11,7 +11,7 @@
 .card-whole-back {
     width: 100%;
     margin: auto;
-    height: 350px;
+    height: 400px;
     padding-top: 10px;
     -webkit-box-shadow: 3px 3px 5px 6px #ccc;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
     -moz-box-shadow:    3px 3px 5px 6px #ccc;  /* Firefox 3.5 - 3.6 */
@@ -64,28 +64,7 @@
 word-break: break-all;
 }
 
-.hospital-name-content{
-    font-family: 'Montserrat', sans-serif;
-    display: flex;
-    max-width: 70%;
-    margin-left: 15px;
-    position: relative;
-    bottom: 7px;
-    font-weight: 600;
-    padding-right: 5px;
-    font-size:3vh;
-    max-height: 30px;
-    overflow: hidden;
-    overflow-wrap: normal;
-    border: 2px solid #2B2B2B;
-    border-top-style:none;
-    border-left-style: none;
-    border-right-style: none;
-    letter-spacing: 3px;
-    /* width: 90%; */
-    text-align: left;  
-   
-}
+
 
 .rd-more-btn{
     font-weight: 900;
@@ -106,21 +85,17 @@ word-break: break-all;
 .hospital-name-content-lg{
     font-family: 'Montserrat', sans-serif;
     display: flex;
-    max-width: 70%;
+    max-width: 80%;
     margin-left: 15px;
     position: relative;
-    bottom: 7px;
     font-weight: 600;
     padding-right: 15px;
-    font-size:3vh;
+    font-size:2vh;
     max-height: 60px;
     overflow: hidden;
     overflow-wrap: normal;
-    /* border: 2px solid #2B2B2B;
-    border-top-style:none;
-    border-left-style: none;
-    border-right-style: none; */
-    letter-spacing: 3px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
     /* width: 90%; */
     text-align: left;  
    
@@ -170,8 +145,11 @@ word-break: break-all;
     padding-bottom: 8px;
     border-radius: 150px;
     text-align: center;   
+    text-decoration: none;
 }
-
+a{
+    text-decoration: none;
+}
 .btn-inside:hover{
     cursor: pointer;
 }
@@ -269,6 +247,14 @@ word-break: break-all;
     position: absolute;
     right: 10%;
     transform: rotate(180deg);
+}
+
+.rd-whole{
+    display: flex;
+}
+.rd-distance{
+    position: relative;
+    left: 10px;
 }
 
 @media(max-width:450px){
