--- a/src/homepage.css
+++ b/src/homepage.css
@@ -1,4 +1,60 @@
+@import url(//db.onlinewebfonts.com/c/7e96eba370659b4e4563309dc4ebb33f?family=Samarkan);
+@font-face {font-family: "Samarkan"; src: url("//db.onlinewebfonts.com/t/7e96eba370659b4e4563309dc4ebb33f.eot"); src: url("//db.onlinewebfonts.com/t/7e96eba370659b4e4563309dc4ebb33f.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/7e96eba370659b4e4563309dc4ebb33f.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/7e96eba370659b4e4563309dc4ebb33f.woff") format("woff"), url("//db.onlinewebfonts.com/t/7e96eba370659b4e4563309dc4ebb33f.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/7e96eba370659b4e4563309dc4ebb33f.svg#Samarkan") format("svg"); }
+@import url('https://fonts.googleapis.com/css2?family=Paytone+One&display=swap');
 .homepage{
     background: linear-gradient(180deg, #8F79F5 0%, #4A2EC7 100%);
     background-attachment: fixed;
+  }
+
+  .iittp-logo{
+    width: 100px;
+    height: 50px;
+    float: left;
+    position: absolute;
+    left: 65px;
+  }
+
+  .logo-class{
+    justify-content: center;
+    align-items: center;
+    color: white;
+    position: relative;
+    bottom: 5px;
+
+  }
+
+
+
+  .logo-covinet{
+    letter-spacing: 3px;
+    font-weight: 300;
+    font-family: 'Roboto', sans-serif;
+    font-size: 35px;
+    margin-left: 25px;
+   
+  }
+
+  @media(max-width:1450px){
+    .logo-covinet{
+      margin-left: 150px;
+    }
+  }
+
+  @media(max-width:1263px){
+    .logo-covinet{
+      margin-left: 180px;
+    }
+  }
+
+  @media(max-width:1190px){
+    .logo-covinet{
+      margin-left: 200px;
+    }
+  }
+
+  @media(max-width:992px){
+    .logo-covinet{
+      margin-left: 250px;
+      font-size: 25px;
+    }
   }
