--- a/src/mapbox/Mapbox.css
+++ b/src/mapbox/Mapbox.css
@@ -48,3 +48,9 @@
   align-items: center;
   cursor: pointer;
 }
+
+/* @media (max-width:800px) {
+  .submitBtn_d{
+    padding: 1.8vh 15vh;
+  }
+} */
