--- a/src/homepage.css
+++ b/src/homepage.css
@@ -14,7 +14,7 @@
     left: 65px;
   }
   .risha-logo{
-    width: 80px;
+    width: 150px;
     height: 50px;
     float: left;
     position: absolute;
@@ -26,7 +26,7 @@
     align-items: center;
     color: white;
     position: relative;
-    bottom: 5px;
+    bottom: 3px;
   }
 
   .submitBtn_d{
@@ -37,27 +37,43 @@
   color: #4A2EC7;
 } 
 
+#drawer.show{
+  width: 100vw;
+}
 
   .logo-covinet{
     letter-spacing: 3px;
     font-weight: 300;
     font-family: 'Roboto', sans-serif;
-    font-size: 35px;
-    margin-left: 230px;
+    font-size: 25px;
+    margin-left: 360px;
    
   }
 
-  @media(max-width:1450px){
+  @media(max-width:1480px){
     .logo-covinet{
-      margin-left: 320px;
+      margin-left: 400px;
       font-size: 25px;
     }
   }
 
-  @media(max-width:1026px){
+  
+  @media(max-width:1298px){
     .logo-covinet{
-      display: none;
+      margin-left: 430px;
+      font-size: 25px;
     }
   }
 
+  
+@media(max-width:1200px){
+
+  .logo-class{
+    position: relative;
+    top:3px;
+  }
+  .logo-covinet{
+  display: none;
+  }
+}
 
