--- a/src/homepage.css
+++ b/src/homepage.css
@@ -41,6 +41,12 @@
   width: 100vw;
 }
 
+.fixedBar{
+  width: 100vw;
+  height: 10vh;
+  background-color: #7B60F7
+}
+
   .logo-covinet{
     letter-spacing: 3px;
     font-weight: 300;
