--- a/src/main.css
+++ b/src/main.css
@@ -212,6 +212,24 @@ select.select_item{
     display: block;margin: auto;
 }
 
+input.select_item{
+  font-family: 'Montserrat';
+  /* color: #FFFFFF; */
+  width:100%;
+  color: black;
+  /* background-color: #7E62FE; */
+  font-size:17px;
+  padding: 1vh;
+  text-align: center;
+  border-left: 1px solid #FFFFFF;
+  border-right: 1px solid #FFFFFF;
+  border-top: 1px solid #FFFFFF;
+  border-bottom: 1px solid #FFFFFF;
+  font-size: small;
+  padding: 1vh 1vh 1vh 1vh;
+  display: block;margin: auto;
+}
+
 #searchBar{
   /* transition: right 0s; */
   z-index: 9;
